syntax = "proto3";
option go_package="./gobtphelper";

service CenterService{
    rpc SendBeat(BeatReq) returns (BeatRes);
}

message BeatReq{
    string serviceName = 1;
    string address = 2;
}

message BeatRes{
    repeated Service services = 1;
}

message Service{
    string serviceName = 1;
    string address = 2;
    int32 isAvailable = 3;
    int64 addTime = 4;
}