syntax = "proto3";
option go_package="./;gobtphelper";

service LogicService{
    rpc SendToLogic(ProtoMessage) returns (ProtoMessageResult);
}

service GatewayService{
    rpc SendToGateway(ProtoMessageResult) returns (ProtoInt);
}

message ProtoInt{
    int32 isOk = 1;
}

message ProtoMessage{
    string msgId = 1;
    int32 isBeat = 2;
    string token = 3;
    optional string nodeCode = 4;
    optional string zoneCode = 5;
    optional string gwCode = 6;
    optional string serviceName = 7;
    optional string actionName = 8;
    optional bytes data =9;
}

message ProtoMessageResult{
    string msgId = 1;
    int32 isAck = 2;
    int64 accountId = 3;
    optional string nodeCode = 4;
    optional string zoneCode = 5;
    optional string gwCode = 6;
    optional string serviceName = 7;
    optional string actionName = 8;
    optional bytes data = 9;
}